Fixing nav on mobile.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -404,6 +404,10 @@ body{
     max-height: none;
   }
 
+nav a{
+  display: block;
+}
+
   #face {
     grid-column: 1/ span 2;
     grid-row: 1;
